fix: fix typos on the index page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
     <h1>Hello!</h1>
     <p>
       I'm <a href="https://ua.linkedin.com/in/siriniok" target="_blank">Vladyslav Siriniok</a> a Software Engineer from Kharkiv, Ukraine.
-      Here is <a href="{{ site.baseurl }}/articles" target="_blank">my blog</a> about techincal and non-techincal aspects of software engineering.
+      Here is <a href="{{ site.baseurl }}/articles">my blog</a> about technical and non-technical aspects of software engineering.
       <br>
       You can follow <a href="https://twitter.com/siriniok" target="_blank">me on Twitter</a> and view my <a href="https://github.com/siriniok" target="_blank">Github profile</a> or <a href="mailto:siriniok@gmail.com" target="_blank">drop me a line</a>.
     </p>
