--- a/index.html
+++ b/index.html
@@ -2,4 +2,9 @@
 layout: default
 ---
 {% include profile.html %}
-{% include showcase.html %}
+<div class="section post-section typeset">
+  <div class="single-measure">
+    {% include showcase.html %}
+    {% include subscription-form.html %}
+  </div>
+</div>
