Add the subscribe button to the main menu

--- a/articles.html
+++ b/articles.html
@@ -28,3 +28,9 @@ permalink: /articles/
   </li>
 {% endfor %}
 </ul>
+
+<div class="section post-section typeset">
+  <div class="single-measure">
+    {% include subscription-form.html %}
+  </div>
+</div>
